# sp

./: Cargo.toml  README.md
src/: base.rs  cli.rs  ends_with.rs  ext.rs  gen_check.rs  lib.rs  main.rs  matcher.rs  max_count.rs  results.rs  search.rs  search_inner.rs  searcher.rs  starts_ends_with.rs  starts_with.rs  words.rs  writer.rs
src/search/: base.rs  ends_with.rs  gen_search.rs  max_count.rs  searcher.rs  starts_ends_with.rs  starts_with.rs  words.rs
tests/: cli.rs
tests/data/: sample.txt
