[package]
name = "sp"
version = "0.1.2"
authors = ["streof"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A tool to search files"
readme = "README.md"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
anyhow = "1.0"
bstr = { version = "0.2", default-features = false, features = ["std", "unicode"] }

[dev-dependencies]
assert_cmd = "0.12"
predicates = "1.0.4"
tempfile = "3"